# terminal_webcam

./: CMakeLists.txt  LICENSE
include/: app.h  camera.h  converter.h  terminal.h
src/: app.cpp  camera.cpp  converter.cpp  main.cpp  terminal.cpp
